<?xml version="1.0"?>
<package format="3">
  <name>arm_move</name>
  <version>0.0.0</version>
  <description>Trajectory publisher for 6-DOF arm</description>
  <maintainer email="ryoppy101@google.com">Your Name</maintainer>
  <license>2025 SameSameIndustry</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
